fix: update z-index values

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 999;
+  z-index: 50;
 }
 
 .modalBody{
